<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp.SignUpEmailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:paddingStart="10dp"
            android:src="@drawable/icon_back_arrow"></ImageView>

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/sign_up_email_tv_appbar"
            android:textAppearance="@style/TextAppearance.GDSC_2324.Head"></TextView>
    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/sign_up_email_tv_name"
        android:textAppearance="@style/TextAppearance.GDSC_2324.Subtitle01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_signup_edt_bg"
        android:hint="@string/sign_up_email_edt_name_hint"
        android:inputType="textPersonName"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />

    <!--이메일-->
    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/sign_up_email_tv_email"
        android:textAppearance="@style/TextAppearance.GDSC_2324.Subtitle01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_name" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/style_signup_edt_bg"
        android:hint="@string/sign_up_email_edt_email_hint"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_email_chk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_email_chk"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/style_signup_chkbtn"
        android:text="@string/sign_up_email_btn_check"
        android:textAppearance="@style/TextAppearance.GDSC_2324.Subtitle01"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email" />


    <!--이메일 에러 메시지-->
    <TextView
        android:id="@+id/tv_email_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:text="@string/sign_up_email_tv_email_error"
        android:textAppearance="@style/TextAppearance.GDSC_2324.SubError"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_email" />


    <!--비밀번호-->
    <TextView
        android:id="@+id/tv_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/sign_up_email_tv_pw"
        android:textAppearance="@style/TextAppearance.GDSC_2324.Subtitle01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email_error" />

    <EditText
        android:id="@+id/edt_pw"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/style_signup_edt_bg"
        android:hint="@string/sign_up_email_edt_pw_hint"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_pw_chk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pw" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_pw_chk"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/style_signup_chkbtn"
        android:text="@string/sign_up_email_btn_check"
        android:textAppearance="@style/TextAppearance.GDSC_2324.Subtitle01"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pw" />




    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="130dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/style_signup_chkbtn"
        android:text="@string/sign_up_email_btn_next"
        android:textAppearance="@style/TextAppearance.GDSC_2324.Subtitle01"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>