<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FindPw.FindPwChkcodeFragment">

    <!--이메일-->
    <TextView
        android:id="@+id/tv_chkcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/findpw_tv_checkcode"
        android:textAppearance="@style/TextAppearance.GDSC_2324.Subtitle01"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp" />

    <EditText
        android:id="@+id/edt_chkcode"
        android:layout_width="0dp"
        android:layout_height="36dp"
        app:layout_constraintTop_toBottomOf="@id/tv_chkcode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_chkcode_chk"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_findpw_edt_bg"
        android:hint="@string/findpw_edt_checkcode_hint"
        android:textSize="14sp"
        android:inputType="number"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_chkcode_chk"
        android:layout_width="0dp"
        android:layout_height="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_chkcode"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/style_findpw_chkbtn"
        android:text="@string/findpw_btn_checkcode"
        android:textAppearance="@style/TextAppearance.GDSC_2324.Subtitle01"
        android:textColor="@color/white"/>

    <!--시간-->
    <TextView
        android:id="@+id/tv_chk_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/edt_chkcode"
        app:layout_constraintTop_toBottomOf="@id/edt_chkcode"
        android:text="@string/findpw_tv_checkcode_time"
        android:textAppearance="@style/TextAppearance.GDSC_2324.Subtitle02"
        android:textColor="@color/red"
        android:layout_marginTop="5dp"
        android:layout_marginStart="25dp"
        android:visibility="visible"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_email_chk"
        android:layout_width="0dp"
        android:layout_height="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/style_findpw_chkbtn"
        android:text="@string/sign_up_email_btn_check"
        android:textAppearance="@style/TextAppearance.GDSC_2324.Subtitle01"
        android:textColor="@color/white"/>


</androidx.constraintlayout.widget.ConstraintLayout>