<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FindPw.NewPwActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_back_arrow"
            android:paddingVertical="20dp"
            android:paddingStart="10dp">
        </ImageView>

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newpw_tv_toolbar"
            android:textAppearance="@style/TextAppearance.GDSC_2324.Head"
            android:gravity="center"
            android:layout_gravity="center">
        </TextView>
    </androidx.appcompat.widget.Toolbar>

    <!--언더라인-->
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:background="@color/toolbar_underline"
        android:layout_gravity="bottom" />

    <TextView
        android:id="@+id/tv_makepw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:text="@string/newpw_tv_makepw"
        android:textAppearance="@style/TextAppearance.GDSC_2324.Subtitle01"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp" />

    <EditText
        android:id="@+id/edt_makepw"
        android:layout_width="0dp"
        android:layout_height="36dp"
        app:layout_constraintTop_toBottomOf="@id/tv_makepw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="25dp"
        android:background="@drawable/style_newpw_edt_bg"
        android:layout_marginTop="10dp"
        android:hint="@string/newpw_edt_makepw_hint"
        android:textSize="14sp"
        android:inputType="textPassword"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"/>

    <TextView
        android:id="@+id/tv_chkpw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_makepw"
        android:text="@string/newpw_tv_chkpw"
        android:textAppearance="@style/TextAppearance.GDSC_2324.Subtitle01"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp" />

    <EditText
        android:id="@+id/edt_chkpw"
        android:layout_width="0dp"
        android:layout_height="36dp"
        app:layout_constraintTop_toBottomOf="@id/tv_chkpw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_newpw_edt_bg"
        android:hint="@string/newpw_edt_chkpw_hint"
        android:textSize="14sp"
        android:inputType="textPassword"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"/>


    <TextView
        android:id="@+id/tv_email_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_chkpw"
        android:text="@string/newpw_tv_chkpw_error"
        android:textAppearance="@style/TextAppearance.GDSC_2324.SubError"
        android:layout_marginTop="5dp"
        android:layout_marginStart="25dp"
        android:visibility="visible"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/style_newpw_chkbtn"
        android:text="@string/newpw_btn_ok"
        android:textAppearance="@style/TextAppearance.GDSC_2324.Subtitle01"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>